# LR5

./: .gitignore  CMakeLists.txt
Task_1/: CMakeLists.txt  cmd
Task_1/include/: task1lib.h
Task_1/src/: Task_1.cpp  task1lib.cpp
Task_1/tests/: test.cpp  tests.cpp
Task_2/: CMakeLists.txt  cmd
Task_2/include/: RecDLL.h  Test.h
Task_2/src/: RecDLL.cpp  Task_2.cpp  testfunc.cpp
Task_2/tests/: test.cpp
Task_3/: CMakeLists.txt  cmd
Task_3/include/: Test.h
Task_3/src/: MatrixDLL.cpp  Task_3.cpp
Task_3/tests/: test.cpp
Task_4/: CMakeLists.txt  cmd
Task_4/include/: Test.h
Task_4/src/: Task_4.cpp
Task_4/tests/: test.cpp
Task_5/: CMakeLists.txt  cmd
Task_5/include/: MatrixDLL.h  Test.h
Task_5/src/: MatrixDll.cpp  Task_5.cpp
